--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,16 @@ services:
     ports:
       - "${REDIS_PORT}:6379"
 
+  celery_workers:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: ./config/bash_scripts/start_workers.sh
+    restart: always
+    container_name: workers
+    environment:
+      - RABBITMQ_HOST=rabbitmq
+      - REDIS_MASTER_HOST=redis
+    links:
+      - redis
+      - rabbitmq
