--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,15 @@ celery = {extras = ["rabbitmq", "redis"], version = "^5.4.0"}
 pytest = "^8.3.5"
 beautifulsoup4 = "^4.13.3"
 dynaconf = "^3.2.10"
+xmltodict = "^0.14.2"
+requests = "^2.32.3"
+aiohttp = "^3.11.13"
 
+
+[tool.poetry.group.celery_worker.dependencies]
+celery = {extras = ["rabbitmq", "redis"], version = "^5.4.0"}
+beautifulsoup4 = "^4.13.3"
+xmltodict = "^0.14.2"
 
 [build-system]
 requires = ["poetry-core"]
