--- a/config/settings.toml
+++ b/config/settings.toml
@@ -8,6 +8,14 @@ page_link="/epz/order/extendedsearch/results.html"
 params={"fz44"="on", "pageNumber"=""}
 page_count=2
 
+[target_site.headers]
+UserAgent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
+Accept = "text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8"
+AcceptLanguage = "ru-RU,ru;q=0.9,en-US;q=0.8,en;q=0.7"
+AcceptEncoding = "gzip, deflate, br"
+Connection = "keep-alive"
+Referer = "https://zakupki.gov.ru/"
+
 [page]
 div_class="w-space-nowrap ml-auto registry-entry__header-top__icon"
 
