--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Kirill <2vvoropaevv2@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.10,<3.11.0 || >3.11.0,<4.0"
 celery = {extras = ["rabbitmq", "redis"], version = "^5.4.0"}
 pytest = "^8.3.5"
 beautifulsoup4 = "^4.13.3"
@@ -14,6 +14,7 @@ dynaconf = "^3.2.10"
 xmltodict = "^0.14.2"
 aiohttp = "^3.11.13"
 aiohttp-retry = "^2.9.1"
+scalene = "^1.5.51"
 
 
 [tool.poetry.group.celery_worker.dependencies]
